# base-attentive

./: .gitignore  .readthedocs.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  BACKEND_CLEANUP_COMPLETE.md  BACKEND_REFACTORING.md  BACKEND_SYSTEM_FINAL.md  BADGES.md  BADGES_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_BUILD.md  DOCUMENTATION_SUMMARY.md  EXAMPLES_AND_APPLICATIONS_COMPLETE.md  GITHUB_SETUP.md  LICENSE  MANIFEST.md  Makefile  PUSH_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TORCH_BACKEND_COMPLETE.md  V2_BACKENDS_IMPLEMENTATION.md  V2_IMPLEMENTATION_PLAN.md  cov_verify  coverage.local  pyproject.toml  pytest.ini  tox.ini  ~$seAttentive_Document_Identification_Material.docx
.claude/: settings.local.json
.github/workflows/: code-quality.yml  documentation.yml  pypi-release.yml  tests.yml
devtools/: run_backend_matrix.py  run_regression_matrix.py
docs/: Makefile  api_reference.rst  applications.rst  architecture_guide.rst  backends.rst  components_reference.rst  conf.py  configuration_guide.rst  contributing.rst  development.rst  index.rst  installation.rst  make.bat  quick_start.rst  release_notes.rst  torch_backend_guide.rst  usage.rst
docs/_build_check/html/: api_reference.html  architecture.html  development.html  genindex.html  index.html  installation.html  search.html  searchindex.js.tmp
docs/_build_check/html/.doctrees/: api_reference.doctree  backends.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build_check/html/_sources/: api_reference.rst.txt  architecture.rst.txt  (+1 more)
docs/_build_check2/html/: .buildinfo  api_reference.html  backends.html  index.html  py-modindex.html  searchindex.js.tmp  usage.html
docs/_build_check4/html/: .buildinfo  api_reference.html  architecture_guide.html  backends.html  components_reference.html  configuration_guide.html  contributing.html  development.html  genindex.html  index.html  installation.html  py-modindex.html  quick_start.html  search.html  searchindex.js.tmp  usage.html
docs/_build_check5/html/: api_reference.html  architecture_guide.html  backends.html  components_reference.html  configuration_guide.html  contributing.html  development.html  genindex.html  index.html  installation.html  py-modindex.html  quick_start.html  search.html  searchindex.js.tmp  usage.html
docs/_static/: custom.css
docs/_templates/: footer.html
docs/backends/: index.rst  jax.rst  tensorflow.rst  torch.rst
docs/notebooks/: index.rst
docs/release_notes/: index.rst  v0.4.2.rst  v0.5.0.rst  v1.0.0.rst  v2.0.0.rst  v2.0.0rc0.rst  v2.0.0rc1.rst  v2.0.1.rst  v2.1.0.rst  v2.2.0.rst  v2.2.3.rst
examples/: 01_quickstart.ipynb  02_hybrid_vs_transformer.ipynb  03_attention_stack_configuration.ipynb  04_standalone_applications.ipynb  05_kernel_robust_networks.ipynb  06_crps_probabilistic_forecasting.ipynb  07_v2_spec_registry.ipynb  08_financial_forecasting.ipynb  09_attention_interpretability.ipynb  10_benchmarking.ipynb  11_landslide_susceptibility.ipynb  model_spec.json  spec_exp_A.json  spec_exp_B.json  spec_exp_C.json
scripts/: create_nb08.py  create_nb09.py  create_nb10.py  create_nb11.py  fix_nb04.py  fix_nb05.py  update_nb04.py  update_nb05.py  update_nb06.py  update_nb07.py
src/base_attentive/: __init__.py  _bootstrap.py  _keras_fallback.py  _keras_runtime.py  _runtime_requirements.py  backend.py  keras_runtime.py  logging.py  runtime.py  validation.py
src/base_attentive/api/: __init__.py  docs.py  property.py
src/base_attentive/backend/: README.md  __init__.py  base.py  detector.py  implementations.py  torch_utils.py  version_check.py
src/base_attentive/compat/: __init__.py  keras.py  sklearn.py  tf.py  types.py  versioning.py
src/base_attentive/components/: __init__.py  _attention_utils.py  _config.py  _loss_utils.py  _norm_utils.py  _temporal_utils.py  attention.py  encoder_decoder.py  gating_norm.py  heads.py  layer_utils.py  losses.py  masks.py  misc.py  temporal.py  utils.py
src/base_attentive/config/: __init__.py  architecture_helpers.py  defaults.py  legacy_adapter.py  normalize.py  schema.py  validate.py
src/base_attentive/core/: __init__.py  base_attentive.py  base_attentive_legacy.py  checks.py  handlers.py
src/base_attentive/experimental/: __init__.py  base_attentive_v2.py
src/base_attentive/implementations/: __init__.py
src/base_attentive/models/: __init__.py  comp_utils.py  utils.py
src/base_attentive/registry/: __init__.py  capabilities.py  component_registry.py  model_registry.py
src/base_attentive/resolver/: __init__.py  assembly.py  backend_context.py  builder_contract.py  component_resolver.py  model_resolver.py  registrars.py
src/base_attentive/tools/: run_backend_matrix.py  run_regression_matrix.py
src/base_attentive/utils/: __init__.py  deps_utils.py  generic_utils.py
src/base_attentive/validation/: __init__.py
tests/: conftest.py  test_api_nnlearner.py  test_backend.py  test_backend_smoke.py  test_base_attentive_layers.py  test_base_attentive_main.py  test_base_attentive_training_api.py  test_compat_and_utils.py  test_compat_versioning.py  test_config_roundtrip.py  test_constructor_parity.py  test_core.py  test_cov_backend_gaps.py  test_cov_compat_registry.py  test_cov_components_keras.py  test_cov_components_pure.py  test_cov_fallback_module.py  test_cov_heads_extended.py  test_cov_implementations_gaps.py  test_cov_losses_extended.py  test_cov_runtime_expansion.py  test_cov_temporal_utils_extended.py  test_cov_torch_utils_extended.py  test_cov_validation_module.py  test_coverage_runtime_surface.py  test_import_lightening.py  test_imports.py  test_legacy_adapter_validation.py  test_multibackend_foundation_patch.py  test_output_shapes.py  test_runtime_acceleration.py  test_runtime_shim.py  test_serialization_paths.py  test_step2_resolver_completion.py  test_step3_config_serialization.py  test_step5_backend_matrix.py  test_step5b_jax_output_path.py  test_tensorflow_builder_kwargs_fix.py  test_torch_backend.py  test_v2_backends.py  (+2 more)
(+59 files in other folders)
