[build-system]
requires = ["setuptools>=61.0,<69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base_attentive"
version = "2.0.0"
description = "Kernel for probabilistic forecasting with attentive sequence models."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "Laurent Kouadio", email = "etanoyau@gmail.com"}
]
maintainers = [
    {name = "Laurent Kouadio", email = "etanoyau@gmail.com"}
]
keywords = [
    "probabilistic-forecasting",
    "quantile-forecasting",
    "attention-mechanisms",
    "time-series",
    "forecasting",
    "deep-learning",
    "keras",
    "sequence-to-sequence",
    "transformer",
    "lstm",
    "jax",
    "torch"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "keras>=3.0.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.15.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
torch = [
    "torch>=2.1.0",
]
all-backends = [
    "tensorflow>=2.15.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "torch>=2.1.0",
]
dev = [
    "build>=1.2.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.6.0",
    "twine>=5.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Repository = "https://github.com/earthai-tech/base-attentive"
Documentation = "https://base-attentive.readthedocs.io"
Homepage = "https://github.com/earthai-tech/base-attentive"
Issues = "https://github.com/earthai-tech/base-attentive/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["base_attentive*"]

[tool.ruff]
line-length = 70
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["base_attentive"]

[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.run]
omit = [
    "src/base_attentive/components/*",
    "src/base_attentive/compat/tf.py",
    "src/base_attentive/validation.py",
]

[tool.coverage.report]
fail_under = 90
